# desafio-secops

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
core/: settings.py
